# disaster_response_pipeline_project

./: .gitignore  COVERAGE.md  README.md  TODO.md  dash_app.py  dash_disaster_response_pipeline.py  disaster_response_pipeline.py  pyproject.toml  requirements.txt  run_server.cmd
.github/: GITHUB.md
classifier/: ML_Pipeline_Preparation.ipynb  train_classifier.py
data/: DATA.md  ETL_Pipeline_Preparation.ipynb  process_data.py
my_scripts/: Clean-Up.ps1
notebooks/: ETL_Pipeline_Preparation.ipynb  ML_Pipeline_Preparation.ipynb
src/: config.py
src/classifier/: train.py
src/data_preparation/: etl_pipeline.py
tests/: test_dash_app.py  test_disaster_response_pipeline.py
tests/classifier/: test_train.py
tests/data_preparation/: test_etl_pipeline.py
