[project]
name = "disaster-response-pipeline-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash-bootstrap-components>=2.0.4",
    "dash>=3.3.0",
    "ipykernel>=7.1.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
